[package]
name = "output_grpc_yellowstone"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tachyonix = "0.3.1"
tonic = "0.13.1"
toml = "0.8.23"
tokio-stream = "0.1.17"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
yellowstone-grpc-client = { version = "6.1.0" }
yellowstone-grpc-proto = "6.1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.11.8"
bs58 = "0.5.0"
